[gd_scene load_steps=8 format=3 uid="uid://b2rlb3akvsmpc"]

[ext_resource type="Shader" uid="uid://dx3tmxh47l25w" path="res://resources/shaders/Sun.gdshader" id="1_l1kev"]
[ext_resource type="Script" uid="uid://0gih1csbfgjn" path="res://scenes/scripts/SunTimer.gd" id="1_m72di"]
[ext_resource type="Shader" uid="uid://cfcussq2cqtx3" path="res://resources/shaders/Distort.gdshader" id="2_gf4g6"]
[ext_resource type="FontFile" uid="uid://cpw8ajt3ibpgq" path="res://resources/fonts/sweet_pancakes.otf" id="4_8u3fl"]

[sub_resource type="Gradient" id="Gradient_si30b"]
interpolation_color_space = 2
colors = PackedColorArray(0.666667, 0.501961, 0.384314, 1, 0.796078, 0.290196, 0.227451, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m72di"]
shader = ExtResource("1_l1kev")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/radius = 0.305
shader_parameter/ray_distance = 0.065
shader_parameter/ray_width = 0.095
shader_parameter/total_rays = 4
shader_parameter/time_scale = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8u3fl"]
shader = ExtResource("2_gf4g6")
shader_parameter/type = 3
shader_parameter/amplitude_x = 32.0
shader_parameter/amplitude_y = 16.0
shader_parameter/time_scale = 1.0

[node name="SunTimer" type="Node2D"]
position = Vector2(192, 192)
scale = Vector2(0.1, 0.1)
script = ExtResource("1_m72di")
gradient = SubResource("Gradient_si30b")

[node name="SunPivot" type="Node2D" parent="."]
position = Vector2(0, 384)

[node name="Sun" type="ColorRect" parent="SunPivot"]
material = SubResource("ShaderMaterial_m72di")
offset_left = -500.0
offset_top = -1588.0
offset_right = 500.0
offset_bottom = -588.0
color = Color(0.665629, 0.502227, 0.384372, 1)

[node name="Mountain" type="Polygon2D" parent="."]
position = Vector2(-256, 0)
color = Color(0.192157, 0.0588235, 0.0666667, 1)
polygon = PackedVector2Array(-128, -256, -640, 832, 1152, 832, 320, -448, 64, 0)

[node name="Cloud" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_8u3fl")
position = Vector2(-398, 224)
color = Color(0.295227, 0.213236, 0.171088, 1)
polygon = PackedVector2Array(-512, -192, -459, -30, -306, 63, 110, 102, 417, 58, 126, 42, -70, -119, -343, -207, -317, -283)

[node name="Cloud2" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_8u3fl")
position = Vector2(591, 323)
color = Color(0.295227, 0.213236, 0.171088, 1)
polygon = PackedVector2Array(370, 44, 220, -210, -135, -276, 132, -153, 103, 25, -170, 120, -461, 164, -122, 195, 160, 208)

[node name="Cloud3" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_8u3fl")
position = Vector2(363, -263)
color = Color(0.295227, 0.213236, 0.171088, 1)
polygon = PackedVector2Array(-18, 49, 3, -57, -77, -150, -86, -13, -310, 15)

[node name="TimeLeft" type="Label" parent="."]
offset_left = -1500.0
offset_top = -64.0
offset_right = 1500.0
offset_bottom = 1062.0
theme_override_fonts/font = ExtResource("4_8u3fl")
theme_override_font_sizes/font_size = 768
text = "10.35s"
horizontal_alignment = 1
